# BigFloatNumberCalculatorOnQtQML

./: CMakeLists.txt  README.md  calculator.cpp  calculator.h  main.cpp  resources.qrc
qml/: Fonts.qml  ImageButton.qml  Main.qml  NumberButton.qml  OperationButton.qml  SecretWindow.qml  TextButton.qml  theme.qml
